# ReasonDB

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  USE_CASES.md  docker-compose.yml  docker-entrypoint.sh
.githooks/: pre-commit
.github/workflows/: bump-version.yml  ci.yml  docker-publish.yml  docs.yml  release-desktop.yml  release.yml
apps/reasondb-client/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
crates/reasondb-cli/: Cargo.toml
crates/reasondb-core/: Cargo.toml
crates/reasondb-core/src/: cache.rs  engine.rs  error.rs  lib.rs  model.rs  query_decomposer.rs  query_filter.rs  store.rs  text_index.rs  trace.rs  tree_grep.rs
crates/reasondb-core/src/auth/: key.rs  mod.rs  permissions.rs  store.rs
crates/reasondb-core/src/cluster/: config.rs  log.rs  mod.rs  network.rs  node.rs  raft.rs  state.rs
crates/reasondb-core/src/llm/: config.rs  dynamic.rs  mod.rs  provider.rs  rig_provider.rs
crates/reasondb-core/src/model/: relation.rs
crates/reasondb-core/src/ratelimit/: store.rs
crates/reasondb-core/src/rql/: ast.rs  error.rs  executor.rs  lexer.rs  mod.rs  parser.rs  tests.rs
crates/reasondb-core/src/rql/executor/: mod.rs  reason.rs  types.rs
crates/reasondb-core/src/store/: indexes.rs  migration.rs  mod.rs  rate_limits.rs  tables.rs  traces.rs
crates/reasondb-ingest/: Cargo.toml
crates/reasondb-ingest/src/: chunker.rs  lib.rs  pipeline.rs  tree_builder.rs
crates/reasondb-server/: Cargo.toml
crates/reasondb-server/src/: auth.rs  error.rs  jobs.rs  lib.rs  main.rs  openapi.rs  state.rs
crates/reasondb-server/src/routes/: auth.rs  cluster.rs  config.rs  documents.rs  ingest.rs  mod.rs  query.rs
docs/: concepts.mdx  custom.css  docs.json  index.mdx  package-lock.json  package.json  quickstart.mdx  theme.json
docs/advanced/: architecture.mdx
docs/api-reference/: introduction.mdx  openapi.json
docs/guides/: backup.mdx  clustering.mdx  monitoring.mdx  plugins-development.mdx  plugins-protocol.mdx  plugins.mdx  (+2 more)
scripts/: update-homebrew.sh
(+66 files in other folders)
