[package]
name = "reasondb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for ReasonDB - models, storage, and reasoning engine"

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# Storage
redb.workspace = true

# Full-text search (BM25)
tantivy.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
regex.workspace = true

# HTTP client
reqwest.workspace = true

# LLM Framework
rig-core.workspace = true
schemars.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
